--- a/foundry.toml
+++ b/foundry.toml
@@ -5,6 +5,10 @@ libs = ['lib']
 ffi = true
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
 
+# added this because it is bugged otherwise
+# see: https://github.com/foundry-rs/foundry/issues/4988
+evm_version = 'shanghai'
+
 remappings = [
     "forge-std/=lib/forge-std/src/",
     "foundry-huff/=lib/foundry-huff/src/",
